--- a/modules/frontend/package.json
+++ b/modules/frontend/package.json
@@ -9,8 +9,12 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "5.10.1",
     "@mui/styles": "^5.10.2",
+    "ag-grid-community": "^28.1.1",
+    "ag-grid-react": "^28.1.1",
+    "apexcharts": "3.21.0",
     "react": ">=18",
-    "react-data-grid": "^7.0.0-beta.16",
+    "react-apexcharts": "1.3.3",
+    "react-data-grid": "7.0.0-beta.16",
     "react-dom": ">=18",
     "react-router-dom": ">=6"
   },
